Stuff that bill made me do there are not even any cookies here yo
Signed-off-by: Jason Myers <jason@jasonamyers.com>

--- a/requirements.txt
+++ b/requirements.txt
@@ -13,8 +13,11 @@ flask==0.12.2             # via flask-restful, flask-script, flask-sqlalchemy
 itsdangerous==0.24        # via flask
 jinja2==2.9.6             # via flask
 markupsafe==1.0           # via jinja2
+marshmallow-jsonapi==0.15.1
+marshmallow==2.13.6       # via marshmallow-jsonapi
 python-dateutil==2.6.1    # via aniso8601
 pytz==2017.2              # via flask-restful
 six==1.10.0               # via flask-restful, python-dateutil
 sqlalchemy==1.1.13        # via flask-sqlalchemy
+uwsgi==2.0.15
 werkzeug==0.12.2          # via flask
