--- a/requirements.txt
+++ b/requirements.txt
@@ -4,21 +4,25 @@
 #
 #    pip-compile --output-file requirements.txt requirements.in
 #
+alembic==0.9.5            # via flask-migrate
 aniso8601==1.2.1          # via flask-restful
 click==6.7                # via flask
+flask-migrate==2.1.0
 flask-restful==0.3.6
 flask-script==2.0.5
 flask-sqlalchemy==2.2
-flask==0.12.2             # via flask-restful, flask-script, flask-sqlalchemy
+flask==0.12.2             # via flask-migrate, flask-restful, flask-script, flask-sqlalchemy
 itsdangerous==0.24        # via flask
 jinja2==2.9.6             # via flask
-markupsafe==1.0           # via jinja2
+mako==1.0.7               # via alembic
+markupsafe==1.0           # via jinja2, mako
 marshmallow-jsonapi==0.15.1
 marshmallow==2.13.6       # via marshmallow-jsonapi
 psycopg2==2.7.3
-python-dateutil==2.6.1    # via aniso8601
+python-dateutil==2.6.1    # via alembic, aniso8601
+python-editor==1.0.3      # via alembic
 pytz==2017.2              # via flask-restful
 six==1.10.0               # via flask-restful, python-dateutil
-sqlalchemy==1.1.13        # via flask-sqlalchemy
+sqlalchemy==1.1.13        # via alembic, flask-sqlalchemy
 uwsgi==2.0.15
 werkzeug==0.12.2          # via flask
